--- a/app/src/main/res/layout/activity_shopping_list.xml
+++ b/app/src/main/res/layout/activity_shopping_list.xml
@@ -6,63 +6,82 @@
     android:layout_height="match_parent"
     tools:context="com.example.patrick.shopper.Activities.ShoppingListActivity">
 
-    <TextView
-        android:id="@+id/budetPromptTextView"
-        android:layout_width="141dp"
-        android:layout_height="25dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/budget_lbl"
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="164dp"
+        android:background="@color/emoRenee"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/budgetTxtView"
-        android:layout_width="171dp"
-        android:layout_height="26dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/initial_cost_text"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/budetPromptTextView"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="8dp" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:onClick="promptItemDetails"
-        android:text="@string/add_item_prompt"
-        app:layout_constraintBaseline_toBaselineOf="@+id/maximizeBtn"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        <TextView
+            android:id="@+id/topDivider"
+            style="@style/Divider" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="123dp"
-        android:layout_height="26dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/total_text"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/budetPromptTextView" />
+        <TextView
+            android:id="@+id/totalCostTxtview"
+            android:layout_width="0dp"
+            android:layout_height="19dp"
+            android:layout_marginRight="16dp"
+            android:text="@string/initial_cost_text"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/totalCostTxtView"
-        android:layout_width="0dp"
-        android:layout_height="19dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/initial_cost_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/budetPromptTextView" />
+        <Button
+            android:id="@+id/maximizeBtn"
+            android:layout_width="86dp"
+            android:layout_height="wrap_content"
+            android:onClick="startMaximizingList"
+            android:text="MAX."
+            tools:layout_editor_absoluteX="253dp"
+            tools:layout_editor_absoluteY="100dp"
+            tools:ignore="MissingConstraints" />
+
+        <Button
+            android:id="@+id/addItemBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="promptItemDetails"
+            android:text="@string/add_item_prompt"
+            tools:layout_editor_absoluteX="32dp"
+            tools:layout_editor_absoluteY="100dp" />
+
+        <TextView
+            android:id="@+id/budetPromptTextView"
+            android:layout_width="171dp"
+            android:layout_height="24dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:text="@string/budget_prompt"
+            android:textAlignment="center"
+            app:layout_constraintEnd_toStartOf="@+id/budgetTxtView"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/budgetTxtView"
+            android:layout_width="171dp"
+            android:layout_height="26dp"
+            android:layout_marginRight="16dp"
+            android:background="@color/darkerEmoRenee"
+            android:gravity="center"
+            android:textAlignment="viewStart"
+            app:layout_constraintBaseline_toBaselineOf="@+id/budetPromptTextView"
+            app:layout_constraintRight_toRightOf="parent"
+            tools:ignore="RtlCompat" />
+
+        <TextView
+            android:id="@+id/middleDivider"
+            style="@style/Divider"
+            android:layout_marginTop="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/budetPromptTextView" />
+
+    </android.support.constraint.ConstraintLayout>
 
     <ScrollView
         android:id="@+id/scrollView2"
@@ -80,20 +99,5 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" />
     </ScrollView>
-
-    <Button
-        android:id="@+id/maximizeBtn"
-        android:layout_width="86dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:onClick="startMaximizingList"
-        android:text="MAX."
-        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button2"
-        app:layout_constraintTop_toBottomOf="@+id/totalCostTxtView" />
 
 </android.support.constraint.ConstraintLayout>
