--- a/app/src/main/res/layout/activity_shopping_list.xml
+++ b/app/src/main/res/layout/activity_shopping_list.xml
@@ -7,9 +7,11 @@
     tools:context="com.example.patrick.shopper.Activities.ShoppingListActivity">
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
-        android:layout_height="164dp"
+        android:layout_height="wrap_content"
         android:background="@color/emoRenee"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -19,34 +21,21 @@
             style="@style/Divider" />
 
         <TextView
-            android:id="@+id/totalCostTxtview"
+            android:id="@+id/totalCostTxtView"
             android:layout_width="0dp"
-            android:layout_height="19dp"
-            android:layout_marginRight="16dp"
+            android:layout_height="36dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:gravity="center"
             android:text="@string/initial_cost_text"
+            android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/maximizeBtn"
-            android:layout_width="86dp"
-            android:layout_height="wrap_content"
-            android:onClick="startMaximizingList"
-            android:text="MAX."
-            tools:layout_editor_absoluteX="253dp"
-            tools:layout_editor_absoluteY="100dp"
-            tools:ignore="MissingConstraints" />
-
-        <Button
-            android:id="@+id/addItemBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="promptItemDetails"
-            android:text="@string/add_item_prompt"
-            tools:layout_editor_absoluteX="32dp"
-            tools:layout_editor_absoluteY="100dp"
-            tools:ignore="MissingConstraints" />
+            app:layout_constraintEnd_toStartOf="@+id/maximizeImgBtn"
+            app:layout_constraintStart_toEndOf="@+id/totalCostTxtDisplay"
+            app:layout_constraintTop_toBottomOf="@+id/middleDivider"
+            app:layout_constraintVertical_bias="0.304" />
 
         <TextView
             android:id="@+id/budetPromptTextView"
@@ -54,23 +43,23 @@
             android:layout_height="24dp"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="4dp"
+            android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
             android:gravity="center"
             android:text="@string/budget_prompt"
             android:textAlignment="center"
-            app:layout_constraintEnd_toStartOf="@+id/budgetTxtView"
+            app:layout_constraintEnd_toStartOf="@+id/displayBudgetTxtView"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginRight="8dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/budgetTxtView"
+            android:id="@+id/displayBudgetTxtView"
             android:layout_width="171dp"
             android:layout_height="26dp"
             android:layout_marginRight="16dp"
             android:background="@color/darkerEmoRenee"
             android:gravity="center"
-            android:textAlignment="viewStart"
+            android:textAlignment="center"
             app:layout_constraintBaseline_toBaselineOf="@+id/budetPromptTextView"
             app:layout_constraintRight_toRightOf="parent"
             tools:ignore="RtlCompat" />
@@ -83,22 +72,74 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/budetPromptTextView" />
 
+        <ImageButton
+            android:id="@+id/addItemImgBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:background="@android:color/transparent"
+            android:onClick="promptItemDetails"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/totalCostTxtDisplay"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/middleDivider"
+            app:srcCompat="@drawable/ic_add_item"/>
+
+
+        <ImageButton
+            android:id="@+id/maximizeImgBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="16dp"
+            android:background="@android:color/transparent"
+            android:onClick="startMaximizingList"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/totalCostTxtView"
+            app:layout_constraintTop_toBottomOf="@+id/middleDivider"
+            app:layout_constraintVertical_bias="0.416"
+            app:srcCompat="@drawable/ic_shopping_cart" />
+
+        <TextView
+            android:id="@+id/totalCostTxtDisplay"
+            android:layout_width="wrap_content"
+            android:layout_height="34dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:gravity="center"
+            android:text="@string/total_text"
+            android:textAlignment="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/totalCostTxtView"
+            app:layout_constraintStart_toEndOf="@+id/addItemImgBtn"
+            app:layout_constraintTop_toBottomOf="@+id/middleDivider" />
+
     </android.support.constraint.ConstraintLayout>
 
     <ScrollView
-        android:id="@+id/scrollView2"
-        android:layout_width="289dp"
-        android:layout_height="284dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginRight="16dp"
+        android:id="@+id/itemListScrollView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+        app:layout_constraintVertical_bias="0.0">
 
         <LinearLayout
             android:id="@+id/itemListLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical" />
     </ScrollView>
 
