--- a/app/src/main/res/layout/activity_shopping_list.xml
+++ b/app/src/main/res/layout/activity_shopping_list.xml
@@ -7,10 +7,11 @@
     tools:context="com.example.patrick.shopper.Activities.ShoppingListActivity">
 
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/constraintLayout"
+        android:id="@+id/optionsConstraintLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/emoRenee"
+        android:elevation="@dimen/elevation_medium"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -24,18 +25,14 @@
             android:id="@+id/totalCostTxtView"
             android:layout_width="0dp"
             android:layout_height="36dp"
-            android:layout_marginBottom="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
             android:gravity="center"
             android:text="@string/initial_cost_text"
             android:textAlignment="center"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBaseline_toBaselineOf="@+id/totalCostTxtDisplay"
             app:layout_constraintEnd_toStartOf="@+id/maximizeImgBtn"
-            app:layout_constraintStart_toEndOf="@+id/totalCostTxtDisplay"
-            app:layout_constraintTop_toBottomOf="@+id/middleDivider"
-            app:layout_constraintVertical_bias="0.304" />
+            app:layout_constraintStart_toEndOf="@+id/totalCostTxtDisplay" />
 
         <TextView
             android:id="@+id/budetPromptTextView"
@@ -89,7 +86,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/middleDivider"
-            app:srcCompat="@drawable/ic_add_item"/>
+            app:srcCompat="@drawable/ic_add_item" />
 
 
         <ImageButton
@@ -133,7 +130,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+        app:layout_constraintTop_toBottomOf="@+id/optionsConstraintLayout"
         app:layout_constraintVertical_bias="0.0">
 
         <LinearLayout
