--- a/app/src/main/res/layout/activity_shopping_list.xml
+++ b/app/src/main/res/layout/activity_shopping_list.xml
@@ -19,7 +19,7 @@
 
         <TextView
             android:id="@+id/topDivider"
-            style="@style/Divider" />
+            style="@style/LongDivider" />
 
         <TextView
             android:id="@+id/totalCostTxtView"
@@ -63,7 +63,7 @@
 
         <TextView
             android:id="@+id/middleDivider"
-            style="@style/Divider"
+            style="@style/LongDivider"
             android:layout_marginTop="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
