--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="text_color_primary">#ff0000</color>
     <color name="iconColor">#c56330</color>
     <color name="darkerEmoRenee">#121419</color>
+    <color name="largeDividerColor">#000000</color>
+    <color name="shortDividerColor">#1b1464</color>
 </resources>
