--- a/app/src/main/res/layout/custom_secondary_actionbar.xml
+++ b/app/src/main/res/layout/custom_secondary_actionbar.xml
@@ -27,15 +27,17 @@
         app:layout_constraintVertical_bias="0.498" />
 
     <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="48dp"
+        android:id="@+id/backBtn"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="4dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
+        android:background="@android:color/transparent"
         android:onClick="goBack"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_action_name" />
 
 </android.support.constraint.ConstraintLayout>
