--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,7 +33,8 @@
 
     <style name="ShortDivider" parent="CustomTheme">
         <item name="android:background">@color/shortDividerColor</item>
-        <item name="android:layout_height">2dp</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:layout_width">match_parent</item>
     </style>
 
 </resources>
