--- a/app/src/main/res/layout/content_maximized_list.xml
+++ b/app/src/main/res/layout/content_maximized_list.xml
@@ -8,14 +8,40 @@
     tools:context="com.example.patrick.shopper.Activities.MaximizedListActivity"
     tools:showIn="@layout/activity_maximized_list">
 
+    <ImageButton
+        android:id="@+id/prevListImageBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:onClick="showPrevList"
+        app:layout_constraintBottom_toBottomOf="@+id/nextListImageBtn"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_media_previous" />
+
+    <ImageButton
+        android:id="@+id/nextListImageBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="16dp"
+        android:onClick="showNextList"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_media_next" />
+
     <ScrollView
         android:id="@+id/scrollView3"
         android:layout_width="368dp"
-        android:layout_height="498dp"
-        android:layout_marginTop="4dp"
+        android:layout_height="427dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/prevListImageBtn">
 
         <LinearLayout
             android:id="@+id/maximizedList"
