--- a/app/src/main/res/layout/prompt_item_details.xml
+++ b/app/src/main/res/layout/prompt_item_details.xml
@@ -24,7 +24,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
         android:ems="10"
-        android:hint="Item Name"
+        android:hint="@string/item_name_example"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView5"
