--- a/app/src/main/res/layout/activity_shopping_list.xml
+++ b/app/src/main/res/layout/activity_shopping_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.patrick.shopper.Activities.ShoppingListActivity">
+    tools:context="com.gmail.patrickma345.shopper.Activities.ShoppingListActivity">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/optionsConstraintLayout"
